@@ -9,7 +9,6 @@ import org.bson.conversions.Bson;
 import org.bson.json.JsonWriterSettings;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -35,6 +34,7 @@ public class AggregationFramework {
 
     /**
      * find the 3 most densely populated cities in Texas.
+     *
      * @param zips sample_training.zips collection from the MongoDB Sample Dataset in MongoDB Atlas.
      */
     private static void threeMostPopulatedCitiesInTexas(MongoCollection<Document> zips) {
@@ -44,14 +44,14 @@ public class AggregationFramework {
         Bson sort = sort(descending("totalPop"));
         Bson limit = limit(3);
 
-        List<Document> results = zips.aggregate(Arrays.asList(match, group, project, sort, limit))
-                                     .into(new ArrayList<>());
+        List<Document> results = zips.aggregate(List.of(match, group, project, sort, limit)).into(new ArrayList<>());
         System.out.println("==> 3 most densely populated cities in Texas");
         results.forEach(printDocuments());
     }
 
     /**
      * find the 3 most popular tags and their post titles
+     *
      * @param posts sample_training.posts collection from the MongoDB Sample Dataset in MongoDB Atlas.
      */
     private static void threeMostPopularTags(MongoCollection<Document> posts) {
@@ -61,7 +61,7 @@ public class AggregationFramework {
         Bson limit = limit(3);
         Bson project = project(fields(excludeId(), computed("tag", "$_id"), include("count", "titles")));
 
-        List<Document> results = posts.aggregate(Arrays.asList(unwind, group, sort, limit, project)).into(new ArrayList<>());
+        List<Document> results = posts.aggregate(List.of(unwind, group, sort, limit, project)).into(new ArrayList<>());
         System.out.println("==> 3 most popular tags and their posts titles");
         results.forEach(printDocuments());
     }
